src/objects/Skills__c.object
<CustomObject>
    <fields>
        <fullName>Interview__c</fullName>
        <label>Interview</label>
        <referenceTo>Interview_Summary__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastUsed__c</fullName>
        <label>Last Used</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Competent</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthsSinceLastUse__c</fullName>
        <formula>MONTH(TODAY()) -  MONTH(LastUsed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months Since Last Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>.NET</fullName>
                </value>
                <value>
                    <fullName>C++</fullName>
                </value>
                <value>
                    <fullName>Ruby</fullName>
                </value>
                <value>
                    <fullName>etc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Skills</label>
    <nameField>
        <displayFormat>SK-{0000}</displayFormat>
        <label>Skills ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>